bin/compilador.output
Terminais sem uso na gramática

    LABEL
    ARRAY
    TYPE
    CASE
    CONST
    MOD
    DOWNTO
    UNTIL
    REPEAT
    T_FILE
    FOR
    IN
    NIL
    T_OF
    PACKED
    RECORD
    SET
    T_TO
    WITH


Gramática

    0 $accept: programa $end

    1 $@1: ε

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_id_par FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    3 $@2: ε

    4 bloco: parte_declara_vars parte_declara_subrotinas $@2 comando_composto

    5 parte_declara_vars: var

    6 var: VAR declara_vars
    7    | ε

    8 declara_vars: declara_vars declara_var
    9             | declara_var

   10 $@3: ε

   11 declara_var: lista_id_var DOIS_PONTOS IDENT $@3 PONTO_E_VIRGULA

   12 lista_id_var: lista_id_var VIRGULA IDENT
   13             | IDENT

   14 lista_id_par: montando_lista_id_par

   15 montando_lista_id_par: montando_lista_id_par VIRGULA IDENT
   16                      | IDENT

   17 parte_declara_subrotinas: ε
   18                         | parte_declara_subrotinas declaracao_procedimento PONTO_E_VIRGULA
   19                         | parte_declara_subrotinas declaracao_function PONTO_E_VIRGULA

   20 $@4: ε

   21 $@5: ε

   22 declaracao_procedimento: $@4 PROCEDURE IDENT parametros_formais $@5 PONTO_E_VIRGULA bloco

   23 $@6: ε

   24 $@7: ε

   25 declaracao_function: $@6 FUNCTION IDENT parametros_formais DOIS_PONTOS IDENT $@7 PONTO_E_VIRGULA bloco

   26 parametros_formais: ABRE_PARENTESES lista_parametros_formais FECHA_PARENTESES

   27 lista_parametros_formais: secao_parametros_formais
   28                         | lista_parametros_formais PONTO_E_VIRGULA secao_parametros_formais

   29 secao_parametros_formais: VAR lista_id_par DOIS_PONTOS IDENT
   30                         | lista_id_par DOIS_PONTOS IDENT
   31                         | FUNCTION lista_id_par DOIS_PONTOS IDENT

   32 atribuicao: IDENT ATRIBUICAO expressao

   33 $@8: ε

   34 lista_expressoes: $@8 expressao

   35 $@9: ε

   36 lista_expressoes: lista_expressoes VIRGULA $@9 expressao

   37 expressao: ABRE_PARENTESES expressao FECHA_PARENTESES
   38          | chamada_funcao
   39          | sinal expressao
   40          | NOT expressao
   41          | expressao MUL expressao
   42          | expressao DIV expressao
   43          | expressao AND expressao
   44          | expressao SOMA expressao
   45          | expressao SUB expressao
   46          | expressao OR expressao
   47          | expressao IGUAL expressao
   48          | expressao DIFERENTE expressao
   49          | expressao MAIOR expressao
   50          | expressao MAIOR_IGUAL expressao
   51          | expressao MENOR expressao
   52          | expressao MENOR_IGUAL expressao
   53          | variavel
   54          | NUMBER

   55 sinal: SOMA
   56      | SUB

   57 variavel: IDENT
   58         | IDENT ABRE_COLCHETES lista_expressoes FECHA_COLCHETES

   59 $@10: ε

   60 $@11: ε

   61 chamada_procedimento: IDENT $@10 ABRE_PARENTESES lista_expressoes FECHA_PARENTESES $@11

   62 $@12: ε

   63 $@13: ε

   64 chamada_procedimento: IDENT $@12 $@13

   65 $@14: ε

   66 $@15: ε

   67 chamada_funcao: IDENT $@14 ABRE_PARENTESES lista_expressoes FECHA_PARENTESES $@15

   68 desvio: GOTO NUMBER

   69 $@16: ε

   70 if_then: IF expressao $@16 THEN comando_sem_rotulo

   71 comando_condicional: if_then

   72 $@17: ε

   73 comando_condicional: if_then ELSE $@17 comando_sem_rotulo

   74 $@18: ε

   75 $@19: ε

   76 comando_repititivo: WHILE $@18 expressao DO $@19 comando_sem_rotulo

   77 comando_composto: T_BEGIN comandos T_END

   78 comandos: comando
   79         | comandos PONTO_E_VIRGULA comando

   80 comando: NUMBER comando_sem_rotulo
   81        | comando_sem_rotulo

   82 comando_sem_rotulo: atribuicao
   83                   | chamada_procedimento
   84                   | desvio
   85                   | comando_composto
   86                   | comando_condicional
   87                   | comando_repititivo


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    PROGRAM (258) 2
    VAR (259) 6 29
    LABEL (260)
    ARRAY (261)
    TYPE (262)
    T_BEGIN (263) 77
    T_END (264) 77
    NUMBER <intV> (265) 54 68 80
    CASE (266)
    CONST (267)
    MOD (268)
    NOT (269) 40
    DOWNTO (270)
    IF (271) 70
    THEN (272) 70
    ELSE (273) 73
    GOTO (274) 68
    WHILE (275) 76
    UNTIL (276)
    DO (277) 76
    REPEAT (278)
    T_FILE (279)
    FOR (280)
    FUNCTION (281) 25 31
    PROCEDURE (282) 22
    IN (283)
    NIL (284)
    T_OF (285)
    PACKED (286)
    RECORD (287)
    SET (288)
    T_TO (289)
    WITH (290)
    SOMA <tokenType> (291) 44 55
    SUB <tokenType> (292) 45 56
    MUL <tokenType> (293) 41
    DIV <tokenType> (294) 42
    AND <tokenType> (295) 43
    OR <tokenType> (296) 46
    IGUAL <tokenType> (297) 47
    DIFERENTE <tokenType> (298) 48
    MENOR <tokenType> (299) 51
    MENOR_IGUAL <tokenType> (300) 52
    MAIOR <tokenType> (301) 49
    MAIOR_IGUAL <tokenType> (302) 50
    ABRE_PARENTESES (303) 2 26 37 61 67
    FECHA_PARENTESES (304) 2 26 37 61 67
    VIRGULA (305) 12 15 36
    PONTO_E_VIRGULA (306) 2 11 18 19 22 25 28 79
    DOIS_PONTOS (307) 11 25 29 30 31
    PONTO (308) 2
    ABRE_COLCHETES (309) 58
    FECHA_COLCHETES (310) 58
    IDENT <tptr> (311) 2 11 12 13 15 16 22 25 29 30 31 32 57 58 61 64 67
    ATRIBUICAO <tptr> (312) 32
    LOWER_THAN_ELSE (313)
    EXPRESSAO_PREC (314)


Não terminais com as regras onde eles aparecem

    $accept (60)
        à esquerda: 0
    programa (61)
        à esquerda: 2
        à direita: 0
    $@1 (62)
        à esquerda: 1
        à direita: 2
    bloco (63)
        à esquerda: 4
        à direita: 2 22 25
    $@2 (64)
        à esquerda: 3
        à direita: 4
    parte_declara_vars <intV> (65)
        à esquerda: 5
        à direita: 4
    var <intV> (66)
        à esquerda: 6 7
        à direita: 5
    declara_vars <intV> (67)
        à esquerda: 8 9
        à direita: 6 8
    declara_var <intV> (68)
        à esquerda: 11
        à direita: 8 9
    $@3 (69)
        à esquerda: 10
        à direita: 11
    lista_id_var <intV> (70)
        à esquerda: 12 13
        à direita: 11 12
    lista_id_par <vecString> (71)
        à esquerda: 14
        à direita: 2 29 30 31
    montando_lista_id_par <vecString> (72)
        à esquerda: 15 16
        à direita: 14 15
    parte_declara_subrotinas <intV> (73)
        à esquerda: 17 18 19
        à direita: 4 18 19
    declaracao_procedimento (74)
        à esquerda: 22
        à direita: 18
    $@4 (75)
        à esquerda: 20
        à direita: 22
    $@5 (76)
        à esquerda: 21
        à direita: 22
    declaracao_function (77)
        à esquerda: 25
        à direita: 19
    $@6 (78)
        à esquerda: 23
        à direita: 25
    $@7 (79)
        à esquerda: 24
        à direita: 25
    parametros_formais <intV> (80)
        à esquerda: 26
        à direita: 22 25
    lista_parametros_formais (81)
        à esquerda: 27 28
        à direita: 26 28
    secao_parametros_formais (82)
        à esquerda: 29 30 31
        à direita: 27 28
    atribuicao (83)
        à esquerda: 32
        à direita: 82
    lista_expressoes <vecType> (84)
        à esquerda: 34 36
        à direita: 36 58 61 67
    $@8 (85)
        à esquerda: 33
        à direita: 34
    $@9 (86)
        à esquerda: 35
        à direita: 36
    expressao <typeID> (87)
        à esquerda: 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54
        à direita: 32 34 36 37 39 40 41 42 43 44 45 46 47 48 49 50 51 52 70 76
    sinal <boolV> (88)
        à esquerda: 55 56
        à direita: 39
    variavel <tptr> (89)
        à esquerda: 57 58
        à direita: 53
    chamada_procedimento (90)
        à esquerda: 61 64
        à direita: 83
    $@10 (91)
        à esquerda: 59
        à direita: 61
    $@11 (92)
        à esquerda: 60
        à direita: 61
    $@12 (93)
        à esquerda: 62
        à direita: 64
    $@13 (94)
        à esquerda: 63
        à direita: 64
    chamada_funcao <typeID> (95)
        à esquerda: 67
        à direita: 38
    $@14 (96)
        à esquerda: 65
        à direita: 67
    $@15 (97)
        à esquerda: 66
        à direita: 67
    desvio (98)
        à esquerda: 68
        à direita: 84
    if_then (99)
        à esquerda: 70
        à direita: 71 73
    $@16 (100)
        à esquerda: 69
        à direita: 70
    comando_condicional (101)
        à esquerda: 71 73
        à direita: 86
    $@17 (102)
        à esquerda: 72
        à direita: 73
    comando_repititivo (103)
        à esquerda: 76
        à direita: 87
    $@18 (104)
        à esquerda: 74
        à direita: 76
    $@19 (105)
        à esquerda: 75
        à direita: 76
    comando_composto (106)
        à esquerda: 77
        à direita: 4 85
    comandos (107)
        à esquerda: 78 79
        à direita: 77 79
    comando (108)
        à esquerda: 80 81
        à direita: 78 79
    comando_sem_rotulo (109)
        à esquerda: 82 83 84 85 86 87
        à direita: 70 73 76 80 81


Estado 0

    0 $accept: • programa $end

    $padrão  reduzir usando a regra 1 ($@1)

    programa  ir ao estado 1
    $@1       ir ao estado 2


Estado 1

    0 $accept: programa • $end

    $end  deslocar, e ir ao estado 3


Estado 2

    2 programa: $@1 • PROGRAM IDENT ABRE_PARENTESES lista_id_par FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    PROGRAM  deslocar, e ir ao estado 4


Estado 3

    0 $accept: programa $end •

    $padrão  aceitar


Estado 4

    2 programa: $@1 PROGRAM • IDENT ABRE_PARENTESES lista_id_par FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  deslocar, e ir ao estado 5


Estado 5

    2 programa: $@1 PROGRAM IDENT • ABRE_PARENTESES lista_id_par FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  deslocar, e ir ao estado 6


Estado 6

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES • lista_id_par FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  deslocar, e ir ao estado 7

    lista_id_par           ir ao estado 8
    montando_lista_id_par  ir ao estado 9


Estado 7

   16 montando_lista_id_par: IDENT •

    $padrão  reduzir usando a regra 16 (montando_lista_id_par)


Estado 8

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_id_par • FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    FECHA_PARENTESES  deslocar, e ir ao estado 10


Estado 9

   14 lista_id_par: montando_lista_id_par •
   15 montando_lista_id_par: montando_lista_id_par • VIRGULA IDENT

    VIRGULA  deslocar, e ir ao estado 11

    $padrão  reduzir usando a regra 14 (lista_id_par)


Estado 10

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_id_par FECHA_PARENTESES • PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  deslocar, e ir ao estado 12


Estado 11

   15 montando_lista_id_par: montando_lista_id_par VIRGULA • IDENT

    IDENT  deslocar, e ir ao estado 13


Estado 12

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_id_par FECHA_PARENTESES PONTO_E_VIRGULA • bloco PONTO

    VAR  deslocar, e ir ao estado 14

    $padrão  reduzir usando a regra 7 (var)

    bloco               ir ao estado 15
    parte_declara_vars  ir ao estado 16
    var                 ir ao estado 17


Estado 13

   15 montando_lista_id_par: montando_lista_id_par VIRGULA IDENT •

    $padrão  reduzir usando a regra 15 (montando_lista_id_par)


Estado 14

    6 var: VAR • declara_vars

    IDENT  deslocar, e ir ao estado 18

    declara_vars  ir ao estado 19
    declara_var   ir ao estado 20
    lista_id_var  ir ao estado 21


Estado 15

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_id_par FECHA_PARENTESES PONTO_E_VIRGULA bloco • PONTO

    PONTO  deslocar, e ir ao estado 22


Estado 16

    4 bloco: parte_declara_vars • parte_declara_subrotinas $@2 comando_composto

    $padrão  reduzir usando a regra 17 (parte_declara_subrotinas)

    parte_declara_subrotinas  ir ao estado 23


Estado 17

    5 parte_declara_vars: var •

    $padrão  reduzir usando a regra 5 (parte_declara_vars)


Estado 18

   13 lista_id_var: IDENT •

    $padrão  reduzir usando a regra 13 (lista_id_var)


Estado 19

    6 var: VAR declara_vars •
    8 declara_vars: declara_vars • declara_var

    IDENT  deslocar, e ir ao estado 18

    $padrão  reduzir usando a regra 6 (var)

    declara_var   ir ao estado 24
    lista_id_var  ir ao estado 21


Estado 20

    9 declara_vars: declara_var •

    $padrão  reduzir usando a regra 9 (declara_vars)


Estado 21

   11 declara_var: lista_id_var • DOIS_PONTOS IDENT $@3 PONTO_E_VIRGULA
   12 lista_id_var: lista_id_var • VIRGULA IDENT

    VIRGULA      deslocar, e ir ao estado 25
    DOIS_PONTOS  deslocar, e ir ao estado 26


Estado 22

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_id_par FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO •

    $padrão  reduzir usando a regra 2 (programa)


Estado 23

    4 bloco: parte_declara_vars parte_declara_subrotinas • $@2 comando_composto
   18 parte_declara_subrotinas: parte_declara_subrotinas • declaracao_procedimento PONTO_E_VIRGULA
   19                         | parte_declara_subrotinas • declaracao_function PONTO_E_VIRGULA

    FUNCTION   reduzir usando a regra 23 ($@6)
    PROCEDURE  reduzir usando a regra 20 ($@4)
    $padrão    reduzir usando a regra 3 ($@2)

    $@2                      ir ao estado 27
    declaracao_procedimento  ir ao estado 28
    $@4                      ir ao estado 29
    declaracao_function      ir ao estado 30
    $@6                      ir ao estado 31


Estado 24

    8 declara_vars: declara_vars declara_var •

    $padrão  reduzir usando a regra 8 (declara_vars)


Estado 25

   12 lista_id_var: lista_id_var VIRGULA • IDENT

    IDENT  deslocar, e ir ao estado 32


Estado 26

   11 declara_var: lista_id_var DOIS_PONTOS • IDENT $@3 PONTO_E_VIRGULA

    IDENT  deslocar, e ir ao estado 33


Estado 27

    4 bloco: parte_declara_vars parte_declara_subrotinas $@2 • comando_composto

    T_BEGIN  deslocar, e ir ao estado 34

    comando_composto  ir ao estado 35


Estado 28

   18 parte_declara_subrotinas: parte_declara_subrotinas declaracao_procedimento • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 36


Estado 29

   22 declaracao_procedimento: $@4 • PROCEDURE IDENT parametros_formais $@5 PONTO_E_VIRGULA bloco

    PROCEDURE  deslocar, e ir ao estado 37


Estado 30

   19 parte_declara_subrotinas: parte_declara_subrotinas declaracao_function • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 38


Estado 31

   25 declaracao_function: $@6 • FUNCTION IDENT parametros_formais DOIS_PONTOS IDENT $@7 PONTO_E_VIRGULA bloco

    FUNCTION  deslocar, e ir ao estado 39


Estado 32

   12 lista_id_var: lista_id_var VIRGULA IDENT •

    $padrão  reduzir usando a regra 12 (lista_id_var)


Estado 33

   11 declara_var: lista_id_var DOIS_PONTOS IDENT • $@3 PONTO_E_VIRGULA

    $padrão  reduzir usando a regra 10 ($@3)

    $@3  ir ao estado 40


Estado 34

   77 comando_composto: T_BEGIN • comandos T_END

    T_BEGIN  deslocar, e ir ao estado 34
    NUMBER   deslocar, e ir ao estado 41
    IF       deslocar, e ir ao estado 42
    GOTO     deslocar, e ir ao estado 43
    WHILE    deslocar, e ir ao estado 44
    IDENT    deslocar, e ir ao estado 45

    atribuicao            ir ao estado 46
    chamada_procedimento  ir ao estado 47
    desvio                ir ao estado 48
    if_then               ir ao estado 49
    comando_condicional   ir ao estado 50
    comando_repititivo    ir ao estado 51
    comando_composto      ir ao estado 52
    comandos              ir ao estado 53
    comando               ir ao estado 54
    comando_sem_rotulo    ir ao estado 55


Estado 35

    4 bloco: parte_declara_vars parte_declara_subrotinas $@2 comando_composto •

    $padrão  reduzir usando a regra 4 (bloco)


Estado 36

   18 parte_declara_subrotinas: parte_declara_subrotinas declaracao_procedimento PONTO_E_VIRGULA •

    $padrão  reduzir usando a regra 18 (parte_declara_subrotinas)


Estado 37

   22 declaracao_procedimento: $@4 PROCEDURE • IDENT parametros_formais $@5 PONTO_E_VIRGULA bloco

    IDENT  deslocar, e ir ao estado 56


Estado 38

   19 parte_declara_subrotinas: parte_declara_subrotinas declaracao_function PONTO_E_VIRGULA •

    $padrão  reduzir usando a regra 19 (parte_declara_subrotinas)


Estado 39

   25 declaracao_function: $@6 FUNCTION • IDENT parametros_formais DOIS_PONTOS IDENT $@7 PONTO_E_VIRGULA bloco

    IDENT  deslocar, e ir ao estado 57


Estado 40

   11 declara_var: lista_id_var DOIS_PONTOS IDENT $@3 • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 58


Estado 41

   80 comando: NUMBER • comando_sem_rotulo

    T_BEGIN  deslocar, e ir ao estado 34
    IF       deslocar, e ir ao estado 42
    GOTO     deslocar, e ir ao estado 43
    WHILE    deslocar, e ir ao estado 44
    IDENT    deslocar, e ir ao estado 45

    atribuicao            ir ao estado 46
    chamada_procedimento  ir ao estado 47
    desvio                ir ao estado 48
    if_then               ir ao estado 49
    comando_condicional   ir ao estado 50
    comando_repititivo    ir ao estado 51
    comando_composto      ir ao estado 52
    comando_sem_rotulo    ir ao estado 59


Estado 42

   70 if_then: IF • expressao $@16 THEN comando_sem_rotulo

    NUMBER           deslocar, e ir ao estado 60
    NOT              deslocar, e ir ao estado 61
    SOMA             deslocar, e ir ao estado 62
    SUB              deslocar, e ir ao estado 63
    ABRE_PARENTESES  deslocar, e ir ao estado 64
    IDENT            deslocar, e ir ao estado 65

    expressao       ir ao estado 66
    sinal           ir ao estado 67
    variavel        ir ao estado 68
    chamada_funcao  ir ao estado 69


Estado 43

   68 desvio: GOTO • NUMBER

    NUMBER  deslocar, e ir ao estado 70


Estado 44

   76 comando_repititivo: WHILE • $@18 expressao DO $@19 comando_sem_rotulo

    $padrão  reduzir usando a regra 74 ($@18)

    $@18  ir ao estado 71


Estado 45

   32 atribuicao: IDENT • ATRIBUICAO expressao
   61 chamada_procedimento: IDENT • $@10 ABRE_PARENTESES lista_expressoes FECHA_PARENTESES $@11
   64                     | IDENT • $@12 $@13

    ATRIBUICAO  deslocar, e ir ao estado 72

    ABRE_PARENTESES  reduzir usando a regra 59 ($@10)
    $padrão          reduzir usando a regra 62 ($@12)

    $@10  ir ao estado 73
    $@12  ir ao estado 74


Estado 46

   82 comando_sem_rotulo: atribuicao •

    $padrão  reduzir usando a regra 82 (comando_sem_rotulo)


Estado 47

   83 comando_sem_rotulo: chamada_procedimento •

    $padrão  reduzir usando a regra 83 (comando_sem_rotulo)


Estado 48

   84 comando_sem_rotulo: desvio •

    $padrão  reduzir usando a regra 84 (comando_sem_rotulo)


Estado 49

   71 comando_condicional: if_then •
   73                    | if_then • ELSE $@17 comando_sem_rotulo

    ELSE  deslocar, e ir ao estado 75

    $padrão  reduzir usando a regra 71 (comando_condicional)


Estado 50

   86 comando_sem_rotulo: comando_condicional •

    $padrão  reduzir usando a regra 86 (comando_sem_rotulo)


Estado 51

   87 comando_sem_rotulo: comando_repititivo •

    $padrão  reduzir usando a regra 87 (comando_sem_rotulo)


Estado 52

   85 comando_sem_rotulo: comando_composto •

    $padrão  reduzir usando a regra 85 (comando_sem_rotulo)


Estado 53

   77 comando_composto: T_BEGIN comandos • T_END
   79 comandos: comandos • PONTO_E_VIRGULA comando

    T_END            deslocar, e ir ao estado 76
    PONTO_E_VIRGULA  deslocar, e ir ao estado 77


Estado 54

   78 comandos: comando •

    $padrão  reduzir usando a regra 78 (comandos)


Estado 55

   81 comando: comando_sem_rotulo •

    $padrão  reduzir usando a regra 81 (comando)


Estado 56

   22 declaracao_procedimento: $@4 PROCEDURE IDENT • parametros_formais $@5 PONTO_E_VIRGULA bloco

    ABRE_PARENTESES  deslocar, e ir ao estado 78

    parametros_formais  ir ao estado 79


Estado 57

   25 declaracao_function: $@6 FUNCTION IDENT • parametros_formais DOIS_PONTOS IDENT $@7 PONTO_E_VIRGULA bloco

    ABRE_PARENTESES  deslocar, e ir ao estado 78

    parametros_formais  ir ao estado 80


Estado 58

   11 declara_var: lista_id_var DOIS_PONTOS IDENT $@3 PONTO_E_VIRGULA •

    $padrão  reduzir usando a regra 11 (declara_var)


Estado 59

   80 comando: NUMBER comando_sem_rotulo •

    $padrão  reduzir usando a regra 80 (comando)


Estado 60

   54 expressao: NUMBER •

    $padrão  reduzir usando a regra 54 (expressao)


Estado 61

   40 expressao: NOT • expressao

    NUMBER           deslocar, e ir ao estado 60
    NOT              deslocar, e ir ao estado 61
    SOMA             deslocar, e ir ao estado 62
    SUB              deslocar, e ir ao estado 63
    ABRE_PARENTESES  deslocar, e ir ao estado 64
    IDENT            deslocar, e ir ao estado 65

    expressao       ir ao estado 81
    sinal           ir ao estado 67
    variavel        ir ao estado 68
    chamada_funcao  ir ao estado 69


Estado 62

   55 sinal: SOMA •

    $padrão  reduzir usando a regra 55 (sinal)


Estado 63

   56 sinal: SUB •

    $padrão  reduzir usando a regra 56 (sinal)


Estado 64

   37 expressao: ABRE_PARENTESES • expressao FECHA_PARENTESES

    NUMBER           deslocar, e ir ao estado 60
    NOT              deslocar, e ir ao estado 61
    SOMA             deslocar, e ir ao estado 62
    SUB              deslocar, e ir ao estado 63
    ABRE_PARENTESES  deslocar, e ir ao estado 64
    IDENT            deslocar, e ir ao estado 65

    expressao       ir ao estado 82
    sinal           ir ao estado 67
    variavel        ir ao estado 68
    chamada_funcao  ir ao estado 69


Estado 65

   57 variavel: IDENT •
   58         | IDENT • ABRE_COLCHETES lista_expressoes FECHA_COLCHETES
   67 chamada_funcao: IDENT • $@14 ABRE_PARENTESES lista_expressoes FECHA_PARENTESES $@15

    ABRE_COLCHETES  deslocar, e ir ao estado 83

    ABRE_PARENTESES  reduzir usando a regra 65 ($@14)
    $padrão          reduzir usando a regra 57 (variavel)

    $@14  ir ao estado 84


Estado 66

   41 expressao: expressao • MUL expressao
   42          | expressao • DIV expressao
   43          | expressao • AND expressao
   44          | expressao • SOMA expressao
   45          | expressao • SUB expressao
   46          | expressao • OR expressao
   47          | expressao • IGUAL expressao
   48          | expressao • DIFERENTE expressao
   49          | expressao • MAIOR expressao
   50          | expressao • MAIOR_IGUAL expressao
   51          | expressao • MENOR expressao
   52          | expressao • MENOR_IGUAL expressao
   70 if_then: IF expressao • $@16 THEN comando_sem_rotulo

    SOMA         deslocar, e ir ao estado 85
    SUB          deslocar, e ir ao estado 86
    MUL          deslocar, e ir ao estado 87
    DIV          deslocar, e ir ao estado 88
    AND          deslocar, e ir ao estado 89
    OR           deslocar, e ir ao estado 90
    IGUAL        deslocar, e ir ao estado 91
    DIFERENTE    deslocar, e ir ao estado 92
    MENOR        deslocar, e ir ao estado 93
    MENOR_IGUAL  deslocar, e ir ao estado 94
    MAIOR        deslocar, e ir ao estado 95
    MAIOR_IGUAL  deslocar, e ir ao estado 96

    $padrão  reduzir usando a regra 69 ($@16)

    $@16  ir ao estado 97


Estado 67

   39 expressao: sinal • expressao

    NUMBER           deslocar, e ir ao estado 60
    NOT              deslocar, e ir ao estado 61
    SOMA             deslocar, e ir ao estado 62
    SUB              deslocar, e ir ao estado 63
    ABRE_PARENTESES  deslocar, e ir ao estado 64
    IDENT            deslocar, e ir ao estado 65

    expressao       ir ao estado 98
    sinal           ir ao estado 67
    variavel        ir ao estado 68
    chamada_funcao  ir ao estado 69


Estado 68

   53 expressao: variavel •

    $padrão  reduzir usando a regra 53 (expressao)


Estado 69

   38 expressao: chamada_funcao •

    $padrão  reduzir usando a regra 38 (expressao)


Estado 70

   68 desvio: GOTO NUMBER •

    $padrão  reduzir usando a regra 68 (desvio)


Estado 71

   76 comando_repititivo: WHILE $@18 • expressao DO $@19 comando_sem_rotulo

    NUMBER           deslocar, e ir ao estado 60
    NOT              deslocar, e ir ao estado 61
    SOMA             deslocar, e ir ao estado 62
    SUB              deslocar, e ir ao estado 63
    ABRE_PARENTESES  deslocar, e ir ao estado 64
    IDENT            deslocar, e ir ao estado 65

    expressao       ir ao estado 99
    sinal           ir ao estado 67
    variavel        ir ao estado 68
    chamada_funcao  ir ao estado 69


Estado 72

   32 atribuicao: IDENT ATRIBUICAO • expressao

    NUMBER           deslocar, e ir ao estado 60
    NOT              deslocar, e ir ao estado 61
    SOMA             deslocar, e ir ao estado 62
    SUB              deslocar, e ir ao estado 63
    ABRE_PARENTESES  deslocar, e ir ao estado 64
    IDENT            deslocar, e ir ao estado 65

    expressao       ir ao estado 100
    sinal           ir ao estado 67
    variavel        ir ao estado 68
    chamada_funcao  ir ao estado 69


Estado 73

   61 chamada_procedimento: IDENT $@10 • ABRE_PARENTESES lista_expressoes FECHA_PARENTESES $@11

    ABRE_PARENTESES  deslocar, e ir ao estado 101


Estado 74

   64 chamada_procedimento: IDENT $@12 • $@13

    $padrão  reduzir usando a regra 63 ($@13)

    $@13  ir ao estado 102


Estado 75

   73 comando_condicional: if_then ELSE • $@17 comando_sem_rotulo

    $padrão  reduzir usando a regra 72 ($@17)

    $@17  ir ao estado 103


Estado 76

   77 comando_composto: T_BEGIN comandos T_END •

    $padrão  reduzir usando a regra 77 (comando_composto)


Estado 77

   79 comandos: comandos PONTO_E_VIRGULA • comando

    T_BEGIN  deslocar, e ir ao estado 34
    NUMBER   deslocar, e ir ao estado 41
    IF       deslocar, e ir ao estado 42
    GOTO     deslocar, e ir ao estado 43
    WHILE    deslocar, e ir ao estado 44
    IDENT    deslocar, e ir ao estado 45

    atribuicao            ir ao estado 46
    chamada_procedimento  ir ao estado 47
    desvio                ir ao estado 48
    if_then               ir ao estado 49
    comando_condicional   ir ao estado 50
    comando_repititivo    ir ao estado 51
    comando_composto      ir ao estado 52
    comando               ir ao estado 104
    comando_sem_rotulo    ir ao estado 55


Estado 78

   26 parametros_formais: ABRE_PARENTESES • lista_parametros_formais FECHA_PARENTESES

    VAR       deslocar, e ir ao estado 105
    FUNCTION  deslocar, e ir ao estado 106
    IDENT     deslocar, e ir ao estado 7

    lista_id_par              ir ao estado 107
    montando_lista_id_par     ir ao estado 9
    lista_parametros_formais  ir ao estado 108
    secao_parametros_formais  ir ao estado 109


Estado 79

   22 declaracao_procedimento: $@4 PROCEDURE IDENT parametros_formais • $@5 PONTO_E_VIRGULA bloco

    $padrão  reduzir usando a regra 21 ($@5)

    $@5  ir ao estado 110


Estado 80

   25 declaracao_function: $@6 FUNCTION IDENT parametros_formais • DOIS_PONTOS IDENT $@7 PONTO_E_VIRGULA bloco

    DOIS_PONTOS  deslocar, e ir ao estado 111


Estado 81

   40 expressao: NOT expressao •
   41          | expressao • MUL expressao
   42          | expressao • DIV expressao
   43          | expressao • AND expressao
   44          | expressao • SOMA expressao
   45          | expressao • SUB expressao
   46          | expressao • OR expressao
   47          | expressao • IGUAL expressao
   48          | expressao • DIFERENTE expressao
   49          | expressao • MAIOR expressao
   50          | expressao • MAIOR_IGUAL expressao
   51          | expressao • MENOR expressao
   52          | expressao • MENOR_IGUAL expressao

    $padrão  reduzir usando a regra 40 (expressao)


Estado 82

   37 expressao: ABRE_PARENTESES expressao • FECHA_PARENTESES
   41          | expressao • MUL expressao
   42          | expressao • DIV expressao
   43          | expressao • AND expressao
   44          | expressao • SOMA expressao
   45          | expressao • SUB expressao
   46          | expressao • OR expressao
   47          | expressao • IGUAL expressao
   48          | expressao • DIFERENTE expressao
   49          | expressao • MAIOR expressao
   50          | expressao • MAIOR_IGUAL expressao
   51          | expressao • MENOR expressao
   52          | expressao • MENOR_IGUAL expressao

    SOMA              deslocar, e ir ao estado 85
    SUB               deslocar, e ir ao estado 86
    MUL               deslocar, e ir ao estado 87
    DIV               deslocar, e ir ao estado 88
    AND               deslocar, e ir ao estado 89
    OR                deslocar, e ir ao estado 90
    IGUAL             deslocar, e ir ao estado 91
    DIFERENTE         deslocar, e ir ao estado 92
    MENOR             deslocar, e ir ao estado 93
    MENOR_IGUAL       deslocar, e ir ao estado 94
    MAIOR             deslocar, e ir ao estado 95
    MAIOR_IGUAL       deslocar, e ir ao estado 96
    FECHA_PARENTESES  deslocar, e ir ao estado 112


Estado 83

   58 variavel: IDENT ABRE_COLCHETES • lista_expressoes FECHA_COLCHETES

    $padrão  reduzir usando a regra 33 ($@8)

    lista_expressoes  ir ao estado 113
    $@8               ir ao estado 114


Estado 84

   67 chamada_funcao: IDENT $@14 • ABRE_PARENTESES lista_expressoes FECHA_PARENTESES $@15

    ABRE_PARENTESES  deslocar, e ir ao estado 115


Estado 85

   44 expressao: expressao SOMA • expressao

    NUMBER           deslocar, e ir ao estado 60
    NOT              deslocar, e ir ao estado 61
    SOMA             deslocar, e ir ao estado 62
    SUB              deslocar, e ir ao estado 63
    ABRE_PARENTESES  deslocar, e ir ao estado 64
    IDENT            deslocar, e ir ao estado 65

    expressao       ir ao estado 116
    sinal           ir ao estado 67
    variavel        ir ao estado 68
    chamada_funcao  ir ao estado 69


Estado 86

   45 expressao: expressao SUB • expressao

    NUMBER           deslocar, e ir ao estado 60
    NOT              deslocar, e ir ao estado 61
    SOMA             deslocar, e ir ao estado 62
    SUB              deslocar, e ir ao estado 63
    ABRE_PARENTESES  deslocar, e ir ao estado 64
    IDENT            deslocar, e ir ao estado 65

    expressao       ir ao estado 117
    sinal           ir ao estado 67
    variavel        ir ao estado 68
    chamada_funcao  ir ao estado 69


Estado 87

   41 expressao: expressao MUL • expressao
